# syllago

./: .gitattributes  .gitignore  .golangci.yml  .handoff-prompt-m9f3.md  .handoff-prompt-next.md  .handoff.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TUI_MOCKUPS.md  VERSIONING.md  commands.json  design-v1.md  install.sh  lexicon.md  plan.md
.beads/: beads.db-shm  beads.db-wal  beads.left.jsonl  beads.left.meta.json  config.yaml  interactions.jsonl  issues.jsonl  last-touched  sync-state.json
.claude/: settings.json
.cultivar/: baseline.json  config.json
.develop/: capmon-seeder-full-coverage.json  converter-design-v2.json  cross-provider-converter-quality-report.md  cross-provider-converter.json  git-registry-system-phase-b.md  git-registry-system-quality-report.md  git-registry-system-validation-report.md  git-registry-system.json  nesco-design-decisions.json  nesco-phase-1-2-phase-b.md  nesco-phase-1-2.json  review-phase1-cli-phase-b.md  review-phase1-cli-quality-report.md  review-phase1-cli-validation-report.md  review-phase1-cli.json  review-phase2-security-phase-b.md  review-phase2-security-quality-report.md  review-phase2-security-validation-report.md  review-phase2-security.json  review-phase4-ux.json  (+20 more)
docs/spec/hooks/examples/python/: .gitignore  pyproject.toml
docs/spec/hooks/examples/python/hooks_interchange/: __init__.py  claude_code.py  exit_codes.py  gemini_cli.py  manifest.py  matchers.py
docs/spec/hooks/examples/python/tests/: test_conformance.py
(+2866 files in other folders)
